Implemented forward pass.

--- a/nnet_project.ipynb
+++ b/nnet_project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,12 @@
     "    # attributes: number of neurons\n",
     "    # implements: operator() which depends on activation function, derivative()\n",
     "    \"\"\"\n",
-    "    def __init__(self, n_neurons: int, activation: Callable[[np.array], np.array]):\n",
-    "        pass\n",
+    "    def __init__(self, input_size: int, output_size: int, activation: Callable[[np.array], np.array], *, sd):\n",
+    "        self.W = np.random.normal(0, sd, size=[input_size, output_size])  # weights\n",
+    "        self.b = np.random.normal(0, sd, size=[1, output_size])  # biases\n",
+    "    \n",
+    "    def __call__(self, input_vector: np.array):\n",
+    "        return activation(input_vector.dot(self.W) + self.b)\n",
     "\n",
     "class Loss(ABC):\n",
     "    \"\"\"\n",
@@ -46,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,44 +72,11 @@
     "                [np.log(p) if y == 1 else np.log(1-p) \n",
     "                 for p, y in zip(y_predicted, y_true)]\n",
     "            )\n",
-    "        )"
+    "        )\n",
+    "    \n",
+    "def sigmoid(x: np.array) -> np.array:\n",
+    "    return 1 / (1 +  np.exp(-x))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dupa = BernLoss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1698386837850806"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dupa(np.array([0.89, 0.2]), np.array([1, 0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -117,7 +88,13 @@
     "    \"\"\"Feedforwad (classical) neural network\"\"\"\n",
     "    def __init__(self, layers: List[Layer], loss: Loss):\n",
     "        self.layers = layers\n",
-    "        self.loss = loss"
+    "        self.loss = loss\n",
+    "        \n",
+    "    def forward(x: np.array):\n",
+    "        y = x\n",
+    "        for layer in layers:\n",
+    "            y = layer(y)\n",
+    "        "
    ]
   },
   {
@@ -138,6 +115,162 @@
    ],
    "source": [
     "np.log(1.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Temp:\n",
+    "    def foo(self, a, b, *, c):\n",
+    "        return a + b - c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Temp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.foo(1, 2, c=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 4\n",
+    "d = 7\n",
+    "x = np.ones([1, k])\n",
+    "W = np.ones([k, d])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x\n",
+    "W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4., 4., 4., 4., 4., 4., 4.]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.dot(W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.ones([2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.ones([1, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2., 2., 2.],\n",
+       "       [2., 2., 2.]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x + b"
    ]
   },
   {
