NNet class creation.

--- a/nnet_project.ipynb
+++ b/nnet_project.ipynb
@@ -10,33 +10,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from typing import List, Callable\n",
+    "from typing import List, Callable, Iterable\n",
     "from abc import ABC, abstractmethod "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Layer:\n",
     "    \"\"\"\n",
-    "    One layer of a neural network\n",
+    "    One layer of a neural network. Used only when creating neural networks.\n",
     "    # attributes: number of neurons\n",
     "    # implements: operator() which depends on activation function, derivative()\n",
     "    \"\"\"\n",
-    "    def __init__(self, input_size: int, output_size: int, activation: Callable[[np.array], np.array], *, sd):\n",
-    "        self.W = np.random.normal(0, sd, size=[input_size, output_size])  # weights\n",
-    "        self.b = np.random.normal(0, sd, size=[1, output_size])  # biases\n",
+    "    def __init__(self, n_neurons: int, activation: Callable[[np.array], np.array], *, verbose=False):\n",
+    "        self.n_neurons = n_neurons\n",
+    "        self.output_size = n_neurons\n",
+    "        self.activation = activation\n",
+    "        self.verbose = verbose\n",
+    "        \n",
+    "    def verbose_print(self, s: str):\n",
+    "        if self.verbose:\n",
+    "            print(s)\n",
+    "    \n",
+    "    def initalize(self, input_size, *, sd=0.05):\n",
+    "        self.input_size = input_size\n",
+    "        self.W = np.random.normal(0, sd, size=[input_size, self.output_size])  # weights\n",
+    "        self.b = np.random.normal(0, sd, size=[1, self.output_size])  # biases\n",
     "    \n",
     "    def __call__(self, input_vector: np.array):\n",
-    "        return activation(input_vector.dot(self.W) + self.b)\n",
+    "        self.verbose_print(\"calculating next vector from sizes {}x{} with matrix {}x{}\".format(*input_vector.shape, self.input_size, self.output_size))\n",
+    "        return self.activation(input_vector.dot(self.W) + self.b)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"Layer(input_size={}, output_size={})\".format(self.input_size, self.output_size)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return str(self)\n",
+    "    \n",
     "\n",
     "class Loss(ABC):\n",
     "    \"\"\"\n",
@@ -50,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +94,177 @@
     "        )\n",
     "    \n",
     "def sigmoid(x: np.array) -> np.array:\n",
-    "    return 1 / (1 +  np.exp(-x))\n"
+    "    return 1 / (1 +  np.exp(-x))\n",
+    "\n",
+    "def identity(x: np.array) -> np.array:\n",
+    "    return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NNet:\n",
+    "    \"\"\"Feedforwad (classical) neural network\"\"\"\n",
+    "    def __init__(self, input_size: int, layers: List[Layer], loss: Loss):\n",
+    "        layers[0].initalize(input_size)\n",
+    "        for i, layer in enumerate(layers):\n",
+    "            if i == 0:\n",
+    "                continue\n",
+    "            layer.initalize(input_size=layers[i-1].output_size)\n",
+    "        self.layers = layers\n",
+    "        self.loss = loss\n",
+    "        \n",
+    "    def __call__(self, x: np.array):\n",
+    "        \"\"\"Forwad pass\"\"\"\n",
+    "        y = x\n",
+    "        for layer in self.layers:\n",
+    "            y = layer(y)\n",
+    "        return y\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nnet = NNet(\n",
+    "    10,\n",
+    "    [Layer(5, sigmoid), Layer(11, sigmoid), Layer(1, identity)],\n",
+    "    QuadraticLoss()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.ones([100, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473],\n",
+       "       [0.01067473]])"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nnet(x)"
    ]
   },
   {
@@ -83,195 +272,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class NNet:\n",
-    "    \"\"\"Feedforwad (classical) neural network\"\"\"\n",
-    "    def __init__(self, layers: List[Layer], loss: Loss):\n",
-    "        self.layers = layers\n",
-    "        self.loss = loss\n",
-    "        \n",
-    "    def forward(x: np.array):\n",
-    "        y = x\n",
-    "        for layer in layers:\n",
-    "            y = layer(y)\n",
-    "        "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3364722366212129"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.log(1.4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class Temp:\n",
-    "    def foo(self, a, b, *, c):\n",
-    "        return a + b - c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = Temp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t.foo(1, 2, c=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = 4\n",
-    "d = 7\n",
-    "x = np.ones([1, k])\n",
-    "W = np.ones([k, d])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x\n",
-    "W"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4., 4., 4., 4., 4., 4., 4.]])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.dot(W)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.ones([2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1.],\n",
-       "       [1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = np.ones([1, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2., 2., 2.],\n",
-       "       [2., 2., 2.]])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x + b"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
