Fixed a typo in function definition.

--- a/01_demo_regression.ipynb
+++ b/01_demo_regression.ipynb
@@ -342,10 +342,10 @@
     "Relu is defined as $Relu(x) = \\max(0, x)$, that is it's $x$ for $x \\geq 0$ and $0$ otherwise. Because of that the gradient is $1$ for $x > 0$ and $0$ otherwise and  implementation is as follows:\n",
     "```\n",
     "class Relu(Activation):\n",
-    "    def forward(self, x: np.array) -> np.ndarray:\n",
+    "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "        return np.where(x >= 0, x, 0)\n",
     "\n",
-    "    def backward(self, x: np.array) -> np.ndarray:\n",
+    "    def backward(self, x: np.ndarray) -> np.ndarray:\n",
     "        return np.where(x >= 0, 1, 0)\n",
     "```\n",
     "Now we can use it as an activation function in our framework."
