Added task description.

--- a/04_image_classification.ipynb
+++ b/04_image_classification.ipynb
@@ -5,7 +5,14 @@
    "metadata": {},
    "source": [
     "# Image classification\n",
-    "Using Kaggle digit dataset available on https://www.kaggle.com/c/digit-recognizer/overview."
+    "Using Kaggle digit dataset available on https://www.kaggle.com/c/digit-recognizer/overview. The goal is to create a system, that can tell what digit is on the image (represented as matrix of pixel values) with a good accuracy. In general, it is difficult to come up with a robust algorithm that would do it, so we will create a classifier based on neural network, that will learn from already labeled data. After that, we will test it's performance on new digits to see if it works.\n",
+    "\n",
+    "Here is a description of a problem from Kaggle:\n",
+    "```\n",
+    "MNIST (\"Modified National Institute of Standards and Technology\") is the de facto “hello world” dataset of computer vision. Since its release in 1999, this classic dataset of handwritten images has served as the basis for benchmarking classification algorithms. As new machine learning techniques emerge, MNIST remains a reliable resource for researchers and learners alike.\n",
+    "\n",
+    "In this competition, your goal is to correctly identify digits from a dataset of tens of thousands of handwritten images. We’ve curated a set of tutorial-style kernels which cover everything from regression to neural networks. We encourage you to experiment with different algorithms to learn first-hand what works well and how techniques compare.\n",
+    "```"
    ]
   },
   {
